attribute and class binding

--- a/index.html
+++ b/index.html
@@ -1,16 +1,26 @@
 <html>
     <head>
+        <style>
+            .color-red { color: red }
+            .color-blue { color: blue }
+            .is-loading { background: red }
+        </style>
     </head>
     <body>
         <div id="root">
-            <ul>
-                <li v-for="name in names" v-text="name"></li>
-            </ul>
-            <input type="text" v-model="newName">
+            <!-- dynamic attribute binding -->
+            <!-- these two are the same as well! -->
+            <button v-bind:title="title">Hover Over Me</button>
+            <button :title="title">Hover Over Me</button>
 
-            <!-- <button v-on:click="addName">Add Name</button> -->
-            <!-- these two buttons do the same thing, just different syntax -->
-            <button @click="addName">Add Name</button>
+            <!-- dynamic class binding -->
+            <h1 :class="className">Hello World</h1>
+
+            <!-- dynamically bind class to button -->
+            <button :class="{ 'is-loading' : isLoading }" @click="toggleClass">Toggle Me</button>
+            
+            <!-- dynamically disable button -->
+            <button :disabled="isWednesday" @click="notWednesday">Click Me Any Day But Wednesday</button>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
 
@@ -18,13 +28,17 @@
             var app = new Vue({
                 el: '#root',
                 data: {
-                    newName: '',
-                    names: ['Joe', 'Mary', 'Jane', 'Jack']
+                    title: "Now the title is being set through Javascript",
+                    className: 'color-red',
+                    isLoading: false,
+                    isWednesday: false  
                 },
                 methods: {
-                    addName() {
-                        this.names.push(this.newName);
-                        this.newName = '';
+                    toggleClass() {
+                        this.isLoading = true;
+                    },
+                    notWednesday() {
+                        alert('it is not wednesday!');
                     }
                 }
             })
