--- a/index.html
+++ b/index.html
@@ -8,19 +8,21 @@
     </head>
     <body>
         <div id="root">
-            <!-- dynamic attribute binding -->
-            <!-- these two are the same as well! -->
-            <button v-bind:title="title">Hover Over Me</button>
-            <button :title="title">Hover Over Me</button>
-
-            <!-- dynamic class binding -->
-            <h1 :class="className">Hello World</h1>
-
-            <!-- dynamically bind class to button -->
-            <button :class="{ 'is-loading' : isLoading }" @click="toggleClass">Toggle Me</button>
+            <h1>
+                {{reversedMessage}}
+            </h1>
             
-            <!-- dynamically disable button -->
-            <button :disabled="isWednesday" @click="notWednesday">Click Me Any Day But Wednesday</button>
+            <hr>
+
+            <h1>All Tasks</h1>
+            <ul>
+                <li v-for="task in tasks" v-text="task.description"></li>
+            </ul>
+            <h1>Incomplete Tasks</h1>
+            <ul>
+                <li v-for="task in incompleteTasks" v-text="task.description"></li>
+            </ul>
+            
         </div>
         <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
 
@@ -28,18 +30,23 @@
             var app = new Vue({
                 el: '#root',
                 data: {
-                    title: "Now the title is being set through Javascript",
-                    className: 'color-red',
-                    isLoading: false,
-                    isWednesday: false  
+                    message: "Hello World",
+                    tasks: [
+                        { description: 'Go to the store', completed: true },
+                        { description: 'Finish screencast', completed: false },
+                        { description: 'Make donation', completed: false },
+                        { description: 'Clear inbox', completed: false },
+                        { description: 'Make dinner', completed: false },
+                        { description: 'Clean room', completed: true }
+                    ]
                 },
-                methods: {
-                    toggleClass() {
-                        this.isLoading = true;
-                    },
-                    notWednesday() {
-                        alert('it is not wednesday!');
-                    }
+                computed: {
+                   reversedMessage() {
+                       return this.message.split('').reverse().join('');
+                   },
+                   incompleteTasks() {
+                       return this.tasks.filter(task => !task.completed);
+                   }
                 }
             })
         </script>
