--- a/index.html
+++ b/index.html
@@ -1,54 +1,17 @@
 <html>
     <head>
         <style>
-            .color-red { color: red }
-            .color-blue { color: blue }
-            .is-loading { background: red }
         </style>
     </head>
     <body>
         <div id="root">
-            <h1>
-                {{reversedMessage}}
-            </h1>
-            
-            <hr>
-
-            <h1>All Tasks</h1>
-            <ul>
-                <li v-for="task in tasks" v-text="task.description"></li>
-            </ul>
-            <h1>Incomplete Tasks</h1>
-            <ul>
-                <li v-for="task in incompleteTasks" v-text="task.description"></li>
-            </ul>
+            <task>Go to the store</task>
+            <task>Go to the bank</task>
+            <task>Go to the doctor</task>
             
         </div>
         <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
 
-        <script>
-            var app = new Vue({
-                el: '#root',
-                data: {
-                    message: "Hello World",
-                    tasks: [
-                        { description: 'Go to the store', completed: true },
-                        { description: 'Finish screencast', completed: false },
-                        { description: 'Make donation', completed: false },
-                        { description: 'Clear inbox', completed: false },
-                        { description: 'Make dinner', completed: false },
-                        { description: 'Clean room', completed: true }
-                    ]
-                },
-                computed: {
-                   reversedMessage() {
-                       return this.message.split('').reverse().join('');
-                   },
-                   incompleteTasks() {
-                       return this.tasks.filter(task => !task.completed);
-                   }
-                }
-            })
-        </script>
+        <script src="main.js"></script>
     </body>
 </html>
