--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     </head>
     <body>
         <div id="root">
-            <task>Go to the store</task>
-            <task>Go to the bank</task>
-            <task>Go to the doctor</task>
+            <task-list></task-list>
+      
             
         </div>
         <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
