--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <html>
-    <head>
-        <style>
-        </style>
-    </head>
-    <body>
-        <div id="root">
-            <task-list></task-list>
-      
-            
-        </div>
-        <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
 
-        <script src="main.js"></script>
-    </body>
+<head>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css" />
+        <style type="text/css"> body { padding-top: 50px; }</style>
+</head>
+
+<body>
+    <div id="root">
+        <!-- @close is a custom event -->
+        <modal v-show="showModal" @close="showModal = false">
+            <p>We insert anything we want in this slot.</p>
+        </modal>
+        <button @click="showModal = true">Show Modal</button>
+
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
+    <script src="main.js"></script>
+</body>
+
 </html>
