communicate between components

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 
 <body>
     <div id="root">
-        <coupon v-on:applied="onCouponApplied"></coupon>
+        <coupon @applied="onCouponApplied"></coupon>
 
+        <h1 v-if="couponApplied">You used a coupon!</h1>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
     <script src="main.js"></script>
