shared state for some data, other individualized data

--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
 
 <body>
     <div id="one">
-        <h1>{{user.name}}</h1>
+        <h1>{{shared.user.name}}</h1>
+        <h3>{{foo}}</h3>
+        <hr>
     </div>
 
     <div id="two">
-        <h1>{{user.name}}</h1>        
+        <h1>{{shared.user.name}}</h1>        
+        <h3>{{foo}}</h3>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
