--- a/index.html
+++ b/index.html
@@ -7,15 +7,8 @@
 </head>
 
 <body>
-    <div id="one">
-        <h1>{{shared.user.name}}</h1>
-        <h3>{{foo}}</h3>
-        <hr>
-    </div>
-
-    <div id="two">
-        <h1>{{shared.user.name}}</h1>        
-        <h3>{{foo}}</h3>
+    <div id="root">
+        <coupon v-model="coupon">
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
